[package]
name = "case_scaping-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full"] }
undetected-chromedriver = { git = "https://github.com/code-ga/Rust-undetected-chromedriver", version = "0.1.2" }
lazy_static = "1.4.0"
